--- a/interfaces/_local_.hostconnection.html
+++ b/interfaces/_local_.hostconnection.html
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">account<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L206">index.d.ts:206</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L220">index.d.ts:220</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -116,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">host<wbr>Id<span class="tsd-signature-symbol">:</span> <a href="../enums/_local_.hostid.html" class="tsd-signature-type">HostId</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L207">index.d.ts:207</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L221">index.d.ts:221</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -126,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">remote<wbr>Site<wbr>Env<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L209">index.d.ts:209</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L223">index.d.ts:223</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -136,7 +136,7 @@
 					<div class="tsd-signature tsd-kind-icon">remote<wbr>Site<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L208">index.d.ts:208</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L222">index.d.ts:222</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -178,9 +178,6 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_.site.html" class="tsd-kind-icon">Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-module">
-						<a href="../classes/_local_.sitepaths.html" class="tsd-kind-icon">Site<wbr>Paths</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
@@ -224,6 +221,9 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a>
+					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
 					</li>
@@ -253,6 +253,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitesjson" class="tsd-kind-icon">SitesJSON</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitesorganization" class="tsd-kind-icon">Sites<wbr>Organization</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_.html#iswindows32bit" class="tsd-kind-icon">is<wbr>Windows32<wbr>Bit</a>
