--- a/interfaces/_local_.releasemanifest.html
+++ b/interfaces/_local_.releasemanifest.html
@@ -111,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">changelog<wbr>Url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L344">index.d.ts:344</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L344">index.d.ts:344</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -126,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L329">index.d.ts:329</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L329">index.d.ts:329</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -141,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">notes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L339">index.d.ts:339</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L339">index.d.ts:339</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -156,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">pub_<wbr>date<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L354">index.d.ts:354</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L354">index.d.ts:354</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">release<wbr>Notes<wbr>Url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L349">index.d.ts:349</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L349">index.d.ts:349</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -186,7 +186,7 @@
 					<div class="tsd-signature tsd-kind-icon">rollout<span class="tsd-signature-symbol">:</span> <a href="_local_.rolloutrules.html" class="tsd-signature-type">RolloutRules</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L361">index.d.ts:361</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L361">index.d.ts:361</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -196,7 +196,7 @@
 					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L359">index.d.ts:359</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L359">index.d.ts:359</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -211,7 +211,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L324">index.d.ts:324</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L324">index.d.ts:324</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -226,7 +226,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L334">index.d.ts:334</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L334">index.d.ts:334</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -273,9 +273,6 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_.site.html" class="tsd-kind-icon">Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-module">
-						<a href="../classes/_local_.sitepaths.html" class="tsd-kind-icon">Site<wbr>Paths</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
@@ -334,6 +331,9 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a>
+					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
 					</li>
@@ -363,6 +363,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitesjson" class="tsd-kind-icon">SitesJSON</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitesorganization" class="tsd-kind-icon">Sites<wbr>Organization</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_.html#iswindows32bit" class="tsd-kind-icon">is<wbr>Windows32<wbr>Bit</a>
