--- a/interfaces/_local_.rolloutrules.html
+++ b/interfaces/_local_.rolloutrules.html
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">auto<wbr>Update<span class="tsd-signature-symbol">:</span> <a href="../modules/_local_.html#autoupdateenabled" class="tsd-signature-type">AutoupdateEnabled</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L368">index.d.ts:368</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L368">index.d.ts:368</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">rollout<wbr>Percentage<span class="tsd-signature-symbol">:</span> <a href="../modules/_local_.html#rolloutpercentage" class="tsd-signature-type">RolloutPercentage</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L367">index.d.ts:367</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L367">index.d.ts:367</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -157,9 +157,6 @@
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_.site.html" class="tsd-kind-icon">Site</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-module">
-						<a href="../classes/_local_.sitepaths.html" class="tsd-kind-icon">Site<wbr>Paths</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
 					</li>
@@ -196,6 +193,9 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a>
+					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
 					</li>
@@ -225,6 +225,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitesjson" class="tsd-kind-icon">SitesJSON</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitesorganization" class="tsd-kind-icon">Sites<wbr>Organization</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_.html#iswindows32bit" class="tsd-kind-icon">is<wbr>Windows32<wbr>Bit</a>
