--- a/interfaces/_local_.siteorganization.html
+++ b/interfaces/_local_.siteorganization.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>SiteServiceRole | @getflywheel/local</title>
+	<title>SiteOrganization | @getflywheel/local</title>
 	<meta name="description" content="Documentation for @getflywheel/local">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,60 +57,46 @@
 					<a href="../modules/_local_.html">&quot;local&quot;</a>
 				</li>
 				<li>
-					<a href="_local_.siteservicerole.html">SiteServiceRole</a>
+					<a href="_local_.siteorganization.html">SiteOrganization</a>
 				</li>
 			</ul>
-			<h1>Enumeration SiteServiceRole</h1>
+			<h1>Interface SiteOrganization</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">SiteOrganization</span>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Enumeration members</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_local_.siteservicerole.html#database" class="tsd-kind-icon">DATABASE</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_local_.siteservicerole.html#http" class="tsd-kind-icon">HTTP</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_local_.siteservicerole.html#php" class="tsd-kind-icon">PHP</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.siteorganization.html#isstarred" class="tsd-kind-icon">is<wbr>Starred</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="database" class="tsd-anchor"></a>
-					<h3>DATABASE</h3>
-					<div class="tsd-signature tsd-kind-icon">DATABASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;db&quot;</span></div>
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="isstarred" class="tsd-anchor"></a>
+					<h3>is<wbr>Starred</h3>
+					<div class="tsd-signature tsd-kind-icon">is<wbr>Starred<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L23">index.d.ts:23</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="http" class="tsd-anchor"></a>
-					<h3>HTTP</h3>
-					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L22">index.d.ts:22</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="php" class="tsd-anchor"></a>
-					<h3>PHP</h3>
-					<div class="tsd-signature tsd-kind-icon">PHP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;php&quot;</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L24">index.d.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L275">index.d.ts:275</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -136,65 +122,59 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-module">
-						<a href="_local_.addonstatus.html" class="tsd-kind-icon">Addon<wbr>Status</a>
+						<a href="../enums/_local_.addonstatus.html" class="tsd-kind-icon">Addon<wbr>Status</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-module">
-						<a href="_local_.hostid.html" class="tsd-kind-icon">Host<wbr>Id</a>
+						<a href="../enums/_local_.hostid.html" class="tsd-kind-icon">Host<wbr>Id</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-module">
-						<a href="_local_.multisite.html" class="tsd-kind-icon">Multi<wbr>Site</a>
+						<a href="../enums/_local_.multisite.html" class="tsd-kind-icon">Multi<wbr>Site</a>
 					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-enum tsd-parent-kind-module">
-						<a href="_local_.siteservicerole.html" class="tsd-kind-icon">Site<wbr>Service<wbr>Role</a>
-						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_local_.siteservicerole.html#database" class="tsd-kind-icon">DATABASE</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_local_.siteservicerole.html#http" class="tsd-kind-icon">HTTP</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_local_.siteservicerole.html#php" class="tsd-kind-icon">PHP</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul class="after-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-module">
-						<a href="_local_.siteservicetype.html" class="tsd-kind-icon">Site<wbr>Service<wbr>Type</a>
+						<a href="../enums/_local_.siteservicerole.html" class="tsd-kind-icon">Site<wbr>Service<wbr>Role</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module">
+						<a href="../enums/_local_.siteservicetype.html" class="tsd-kind-icon">Site<wbr>Service<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_.site.html" class="tsd-kind-icon">Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
+						<a href="_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.hostconnection.html" class="tsd-kind-icon">Host<wbr>Connection</a>
+						<a href="_local_.hostconnection.html" class="tsd-kind-icon">Host<wbr>Connection</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.iprocessopts.html" class="tsd-kind-icon">IProcess<wbr>Opts</a>
+						<a href="_local_.iprocessopts.html" class="tsd-kind-icon">IProcess<wbr>Opts</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
+						<a href="_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
+						<a href="_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
+						<a href="_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.sitebanner.html" class="tsd-kind-icon">Site<wbr>Banner</a>
+						<a href="_local_.sitebanner.html" class="tsd-kind-icon">Site<wbr>Banner</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
+						<a href="_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a>
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_.siteorganization.html#isstarred" class="tsd-kind-icon">is<wbr>Starred</a>
+							</li>
+						</ul>
 					</li>
+				</ul>
+				<ul class="after-current">
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
 					</li>
@@ -247,10 +227,11 @@
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
+				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
+				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
