--- a/modules/_local_.html
+++ b/modules/_local_.html
@@ -82,7 +82,6 @@
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/_local_.site.html" class="tsd-kind-icon">Site</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/_local_.sitepaths.html" class="tsd-kind-icon">Site<wbr>Paths</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -96,6 +95,7 @@
 								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_.sitebanner.html" class="tsd-kind-icon">Site<wbr>Banner</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -111,6 +111,7 @@
 								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_local_.html#sitestatus" class="tsd-kind-icon">Site<wbr>Status</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_local_.html#sites" class="tsd-kind-icon">Sites</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_local_.html#sitesjson" class="tsd-kind-icon">SitesJSON</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_local_.html#sitesorganization" class="tsd-kind-icon">Sites<wbr>Organization</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -130,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">Autoupdate<wbr>Enabled<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L315">index.d.ts:315</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L315">index.d.ts:315</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -146,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">Logging<wbr>Level<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"warn"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"info"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"error"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"debug"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"verbose"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L242">index.d.ts:242</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L236">index.d.ts:236</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -156,7 +157,7 @@
 					<div class="tsd-signature tsd-kind-icon">Rollout<wbr>Percentage<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L309">index.d.ts:309</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L309">index.d.ts:309</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -171,7 +172,7 @@
 					<div class="tsd-signature tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>basicAuthPassword<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>basicAuthUsername<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>subdomain<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L80">index.d.ts:80</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L80">index.d.ts:80</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -195,7 +196,7 @@
 					<div class="tsd-signature tsd-kind-icon">Site<wbr>Port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L57">index.d.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L57">index.d.ts:57</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -205,7 +206,7 @@
 					<div class="tsd-signature tsd-kind-icon">Site<wbr>Service<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>ports<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol">; </span>role<span class="tsd-signature-symbol">?: </span><a href="../enums/_local_.siteservicerole.html" class="tsd-signature-type">SiteServiceRole</a><span class="tsd-signature-symbol">; </span>type<span class="tsd-signature-symbol">: </span><a href="../enums/_local_.siteservicetype.html" class="tsd-signature-type">SiteServiceType</a><span class="tsd-signature-symbol">; </span>version<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L33">index.d.ts:33</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L33">index.d.ts:33</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -237,7 +238,7 @@
 					<div class="tsd-signature tsd-kind-icon">Site<wbr>Services<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L55">index.d.ts:55</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L55">index.d.ts:55</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -255,7 +256,7 @@
 					<div class="tsd-signature tsd-kind-icon">Site<wbr>Status<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"adding"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"cloning"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"container-missing"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"copying"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"creating"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"deleting"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"exporting"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"exporting-db"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"halted"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"processing"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"provisioning"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"provisioning-error"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"restarting"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"running"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"saving"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"starting"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"stopping"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"updating-wp"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"wordpress-install-error"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L58">index.d.ts:58</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L58">index.d.ts:58</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -265,7 +266,7 @@
 					<div class="tsd-signature tsd-kind-icon">Sites<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L220">index.d.ts:220</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L234">index.d.ts:234</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -283,7 +284,7 @@
 					<div class="tsd-signature tsd-kind-icon">SitesJSON<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L123">index.d.ts:123</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L123">index.d.ts:123</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -291,6 +292,24 @@
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-index-signature">
 								<h5><span class="tsd-signature-symbol">[</span>siteID: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../interfaces/_local_.sitejson.html" class="tsd-signature-type">SiteJSON</a></h5>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
+					<a name="sitesorganization" class="tsd-anchor"></a>
+					<h3>Sites<wbr>Organization</h3>
+					<div class="tsd-signature tsd-kind-icon">Sites<wbr>Organization<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L278">index.d.ts:278</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+							<li class="tsd-parameter-index-signature">
+								<h5><span class="tsd-signature-symbol">[</span>siteId: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../interfaces/_local_.siteorganization.html" class="tsd-signature-type">SiteOrganization</a></h5>
 							</li>
 						</ul>
 					</div>
@@ -308,7 +327,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/index.d.ts#L259">index.d.ts:259</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L253">index.d.ts:253</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -354,9 +373,6 @@
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_.site.html" class="tsd-kind-icon">Site</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-module">
-						<a href="../classes/_local_.sitepaths.html" class="tsd-kind-icon">Site<wbr>Paths</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
 					</li>
@@ -380,6 +396,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_.siteorganization.html" class="tsd-kind-icon">Site<wbr>Organization</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
@@ -410,6 +429,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="_local_.html#sitesjson" class="tsd-kind-icon">SitesJSON</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="_local_.html#sitesorganization" class="tsd-kind-icon">Sites<wbr>Organization</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="_local_.html#iswindows32bit" class="tsd-kind-icon">is<wbr>Windows32<wbr>Bit</a>
