--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -124,6 +124,7 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteprocessmanager.html" class="tsd-kind-icon">Site<wbr>Process<wbr>Manager</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteprovisioner.html" class="tsd-kind-icon">Site<wbr>Provisioner</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteshellentry.html" class="tsd-kind-icon">Site<wbr>Shell<wbr>Entry</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.sitesorganizationservice.html" class="tsd-kind-icon">Sites<wbr>Organization<wbr>Service</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.wpcli.html" class="tsd-kind-icon">Wp<wbr>Cli</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.x509cert.html" class="tsd-kind-icon">X509<wbr>Cert</a></li>
 							</ul>
@@ -165,7 +166,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/main.d.ts#L1076">main.d.ts:1076</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L1079">main.d.ts:1079</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -191,7 +192,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/main.d.ts#L1072">main.d.ts:1072</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L1075">main.d.ts:1075</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -209,7 +210,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/main.d.ts#L1068">main.d.ts:1068</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L1071">main.d.ts:1071</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -325,6 +326,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.siteshellentry.html" class="tsd-kind-icon">Site<wbr>Shell<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.sitesorganizationservice.html" class="tsd-kind-icon">Sites<wbr>Organization<wbr>Service</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.wpcli.html" class="tsd-kind-icon">Wp<wbr>Cli</a>
