--- a/modules/_local_renderer_.html
+++ b/modules/_local_renderer_.html
@@ -71,7 +71,10 @@
 						<section class="tsd-index-section ">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_renderer_.addonsettingsitem.html" class="tsd-kind-icon">Addon<wbr>Settings<wbr>Item</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_renderer_.confirmargs.html" class="tsd-kind-icon">Confirm<wbr>Args</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_renderer_.menucontentrowitem.html" class="tsd-kind-icon">Menu<wbr>Content<wbr>Row<wbr>Item</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_local_renderer_.preferencessection.html" class="tsd-kind-icon">Preferences<wbr>Section</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -98,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">React<wbr>Node<wbr>Like<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ReactNode</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/renderer.d.ts#L5">renderer.d.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/renderer.d.ts#L5">renderer.d.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +118,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/renderer.d.ts#L34">renderer.d.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/renderer.d.ts#L34">renderer.d.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -138,7 +141,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/renderer.d.ts#L32">renderer.d.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/renderer.d.ts#L32">renderer.d.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -188,7 +191,16 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_renderer_.addonsettingsitem.html" class="tsd-kind-icon">Addon<wbr>Settings<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_renderer_.confirmargs.html" class="tsd-kind-icon">Confirm<wbr>Args</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_renderer_.menucontentrowitem.html" class="tsd-kind-icon">Menu<wbr>Content<wbr>Row<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_renderer_.preferencessection.html" class="tsd-kind-icon">Preferences<wbr>Section</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="_local_renderer_.html#reactnodelike" class="tsd-kind-icon">React<wbr>Node<wbr>Like</a>
